--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -24,3 +24,27 @@ body {
     letter-spacing: -1px;
   }
 }
+
+li {
+  list-style-type: none;
+}
+
+#title, #content, #author, #tags {
+  padding: 16px 16px 16px 16px;
+  border: none;
+  z-index: 2;
+  margin: 0;
+  margin-top: 10px;
+  width: 100%;
+  font-size: 24px;
+  box-shadow: inset 0 0 20px #000000;
+}
+
+#content {
+  height: 100px;
+}
+
+button {
+  float: right;
+  margin-top: 10px;
+}
