--- a/app/templates/post.handlebars
+++ b/app/templates/post.handlebars
@@ -1,9 +1,9 @@
 {{#each post}}
   <li>
-    <h2>{{{ title }}}</h2>
-    <p>{{{ content }}}</p>
-    <small>{{{ author }}}</small>
-    <small>{{{ date }}}</small>
-    <a href="#">{{{ tags }}}</a>
+    <h2>{{title}}</h2>
+    <p>{{content}}</p>
+    <small>{{author}}</small>
+    <small>{{date}}</small>
+    <a href="#">{{tags}}</a>
   </li>
 {{/each}}
