Progression with routes

--- a/app/templates/post.handlebars
+++ b/app/templates/post.handlebars
@@ -1,6 +1,6 @@
 {{#each post}}
   <li>
-    <h2>{{title}}</h2>
+    <a href="#" class="post_title">{{title}}</a>
     <p>{{content}}</p>
     <small>{{author}}</small>
     <small>{{date}}</small>
