--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -19,7 +19,7 @@ body {
   border-radius: 6px;
   padding: 60px;
   h1 {
-    font-size: 60px;
+    font-size: 90px;
     line-height: 1;
     letter-spacing: -1px;
   }
@@ -47,4 +47,21 @@ li {
 button {
   float: right;
   margin-top: 10px;
+}
+
+a.post_title {
+  font-size: 60px;
+  line-height: 1;
+  letter-spacing: -1px;
+}
+
+.fullpost-unit {
+  margin: 50px auto 0 auto;
+  width: 900px;
+  font-size: 18px;
+  font-weight: 200;
+  line-height: 30px;
+  background-color: #eee;
+  border-radius: 6px;
+  padding: 60px;
 }
