--- a/app/templates/fullpost.handlebars
+++ b/app/templates/fullpost.handlebars
@@ -1,6 +1,6 @@
 {{#each fullpost}}
   <li>
-    <a href="{{ _id }}" id="{{ _id }}" class="post_title">{{title}}</a>
+    <a href="#" id="{{_id}}" class="post_title">{{title}}</a>
     <p>{{content}}</p>
     <small>{{author}}</small>
     <small>{{date}}</small>
