--- a/app/templates/post.handlebars
+++ b/app/templates/post.handlebars
@@ -1,7 +1,7 @@
  {{#each post}}
 	<li>
-		<a href="{{ _id }}" id="{{ _id }}" class="post_title">{{title}}</a>
-		{{! <h2>{{{ title }}}</h2> }}
+		<a href="#" id="{{_id}}" class="post_title">{{title}}</a>
+		{{!-- <h2>{{{ title }}}</h2> --}}
 		<p>{{{ content }}}</p>
 		<small>{{{ author }}}</small>
 		<small>{{{ date }}}</small>
