--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -10,7 +10,7 @@ body {
 }
 
 .hero-unit {
-  margin: 50px auto 0 auto;
+  margin: 50px auto 50px auto;
   width: 900px;
   font-size: 18px;
   font-weight: 200;
@@ -19,12 +19,12 @@ body {
   border-radius: 6px;
   padding: 60px;
   padding-top: 30px;
-  h1 {
-    font-size: 60px;
-    line-height: 1;
-    letter-spacing: -1px;
-    display: inline;
-  }
+  // h1 {
+  //   font-size: 60px;
+  //   line-height: 1;
+  //   letter-spacing: -1px;
+  //   display: inline;
+  // }
   #lamp {
     margin: 0px auto;
     padding-bottom: 15px;
@@ -37,11 +37,10 @@ body {
       max-width: 60px;
       height: auto;
       padding: 5px;
-      // opacity: 0.7;
-      // border: 1px solid rgba(255,255,255,0.3);  
     }
   }
 }
+
 ul{
   margin-top: 90px;
   li {
@@ -56,7 +55,6 @@ ul{
   }
 }
 
-
 #title, #content, #author, #tags {
   padding: 16px 16px 16px 16px;
   border: none;
@@ -69,7 +67,7 @@ ul{
 }
 
 #content {
-  height: 300px;
+  height: 200px;
 }
 
 #submitBtn {
@@ -92,20 +90,13 @@ a.post_title {
   margin-top: 60px;
   color: #6FB087;
   font-size: 50px;
+  font-weight: 200px;
   line-height: 1;
-  letter-spacing: -1px;
+  letter-spacing: 0px;
   text-decoration: none;
-}
-
-.fullpost-unit {
-  margin: 50px auto 0 auto;
-  width: 900px;
-  font-size: 18px;
-  font-weight: 200;
-  line-height: 30px;
-  background-color: #eee;
-  border-radius: 6px;
-  padding: 60px;
+  &:hover {
+    color: #F0122B;
+  } 
 }
 
 a {
@@ -116,12 +107,11 @@ a {
   display:inline-block;
   float: right;
   border: 1px solid #F0122B;
-  border-radius: 2em;
+  border-radius: 100px;
   background-color: #2E3236;
   transition: all 0.3s ease;
-  // padding: 15px;
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
   &:hover {
     background: #F0122B;
     // color: #2E3236;
@@ -129,9 +119,9 @@ a {
   .octicon-x {
     text-align: center;
     color: #F0122B;
-    font-size: 30px;
-    padding-top: 5px;
-    padding-left: 10px;
+    font-size: 24px;
+    padding-top: 3px;
+    padding-left: 6.5px;
     &:hover {
       color: #2E3236;
     }
@@ -140,4 +130,73 @@ a {
 
 p, small {
   color: #A9A9A9;
+  margin-right: 10px;
 }
+
+//FULL POST VIEW STYLES...................................
+
+.lamp_solo {
+  margin: 0px auto;
+  padding-bottom: 15px;
+  padding-top: 50px;
+    >img {
+    display:block;
+    margin:auto;
+    background: #A9A9A9;
+    border-radius: 2em;
+    max-width: 60px;
+    height: auto;
+    padding: 5px;
+    opacity: 0.2; 
+  }
+}
+
+.full_post {
+  margin: 50px auto 50px auto;
+  width: 900px;
+  font-size: 18px;
+  font-weight: 200;
+  line-height: 30px;
+  background-color: #eee;
+  border-radius: 6px;
+  padding: 0px 60px 60px 60px;
+  ul {
+    margin-top: 10px;
+    padding: 0px;
+    h2 {
+    color: #2E3236;
+    font-size: 60px;
+    text-align: center;
+    line-height: 100px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    }
+    .boiler {
+      margin-top: 90px;
+      margin-bottom: 0px;
+      padding-left: 170px;
+      background: #2E3236;
+      p.full {
+        color: #A9A9A9;
+        font-size: 24px;
+        text-align: center;
+      }
+      small.full {
+        color: #A9A9A9;
+        font-size: 12px;
+        a.full {
+          font-size: 12px;
+        }
+      }
+    }
+  }
+}
+
+
+
+
+
+
+
+
+
